Fix to stop sticky / fixed elements from overlapping feedback component.

--- a/app/assets/stylesheets/govuk_publishing_components/components/_feedback.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_feedback.scss
@@ -1,6 +1,8 @@
 .gem-c-feedback {
-  max-width: $govuk-page-width;
+  background: govuk-colour("white");
   margin: 0 auto;
+  max-width: $govuk-page-width;
+  position: relative;
 
   .visually-hidden {
     @include govuk-visually-hidden;
